--- a/SPA/src/app/views/main/home/main-home/main-home.component.html
+++ b/SPA/src/app/views/main/home/main-home/main-home.component.html
@@ -4,7 +4,7 @@
       <div class="card">
         <form class="form-horizontal text-center" autocomplete="off">
           <!-- <h2 class="pt-2">LẬP KẾ HOẠCH HUẤN LUYỆN</h2>
-          <h4>CHO CẦU THỦ GAME TOP ELEVEN</h4> -->
+          <h4>CHO CẦU THỦ TOP ELEVEN</h4> -->
         </form>
         <div class="card-body">
           <div class="row border-shadow">
@@ -13,7 +13,7 @@
                 <label class>Chọn cầu thủ</label>
               </div>
               <div class="col-3">
-                <ng-select id="Name" name="Name" [(ngModel)]="param.ten" (ngModelChange)="onSelect()">
+                <ng-select name="inforId" [(ngModel)]="param.inforID" (ngModelChange)="onSelect()">
                   <ng-option *ngFor="let item of players"
                     value="{{ item.key }}">{{ item.value }}</ng-option>
                 </ng-select>
@@ -24,21 +24,21 @@
             <div class="row col-12 mt-4">
               <div class="col-4">
                 <label class>Tên cầu thủ</label>
-                <input autocomplete="off" type="text" class="form-control" name="Name" maxlength="100" [(ngModel)]="data.ten" />
+                <input autocomplete="off" type="text" class="form-control" name="Name" maxlength="100" [(ngModel)]="data.name" />
               </div>
               <div class="col-4 ml-2">
                 <label>Vị Trí</label>
-                <input autocomplete="off" type="text" class="form-control" name="role" [(ngModel)]="data.viTri" />
+                <input autocomplete="off" type="text" class="form-control" name="role" [(ngModel)]="data.position" />
               </div>
               <div class="col-4">
                 <div class="row">
                   <label>Tư chất</label>
                   <div class="col-9">
-                    <input autocomplete="off" type="text" class="form-control" name="personality" [(ngModel)]="data.tuChat" />
+                    <input autocomplete="off" type="text" class="form-control" name="personality" [(ngModel)]="data.personality" />
 
                   </div>
                   <div class="col-3">
-                    <button type="button" (click)="openTemplate()" class="btn btn-danger ml-1">
+                    <button type="button" (click)="openTemplate('tuChat')" class="btn btn-danger ml-1">
                       <i class="fa fa-plus"></i> Tính
                     </button>
                   </div>
@@ -156,26 +156,53 @@
                 </div>
               </div>
             </div>
-            <div class="col-12">
-              <label class="d-block">&nbsp;</label>
-              <button type="button" (click)="chuyenThongTin()" class="btn btn-success ml-1">
-                <i class="fa fa-plus"></i> Chuyển thông tin
-              </button>
-              <button type="button" (click)="save('add')" class="btn btn-danger ml-1">
-                <i class="fa fa-plus"></i> Lưu thông tin
-              </button>
-              <button type="button" (click)="save('edit')" class="btn btn-danger ml-1">
-                <i class="fa fa-plus"></i> Sửa Thông tin
-              </button>
-              <button type="button" (click)="delete()" class="btn btn-danger ml-1">
-                <i class="fa fa-plus"></i> Xóa Cầu thủ
-              </button>
+            <div class="row">
+              <div class="col-12">
+                <label class="d-block">&nbsp;</label>
+                <button type="button" (click)="chuyenThongTin()" class="btn btn-success ml-1">
+                  <i class="fa fa-plus"></i> Chuyển thông tin
+                </button>
+                <button type="button"
+                        (click)="changeThuocTinh()"
+                        class="btn btn-success ml-1">
+                  <i class="fa fa-plus"></i> 1 Tuổi
+                </button>
+                <button type="button" (click)="save('add')" class="btn btn-danger ml-1">
+                  <i class="fa fa-plus"></i> Lưu thông tin
+                </button>
+                <button type="button" (click)="save('edit')" class="btn btn-danger ml-1">
+                  <i class="fa fa-plus"></i> Sửa Thông tin
+                </button>
+                <button type="button" (click)="delete()" class="btn btn-danger ml-1">
+                  <i class="fa fa-plus"></i> Xóa Cầu thủ
+                </button>
+              </div>
+              <div class="row col-12">
+                <div class=" col-4">
+                  <label class="ml-1">Điểm trung bình</label>
+                  <input autocomplete="off" type="text" class="form-control" name="diemTBTong" maxlength="100" [(ngModel)]="diemTB" />
+                </div>
+                <div class=" col-4"> <!-- Thay đổi class margin-left nếu cần -->
+                  <label class="ml-1">Thuộc tính</label>
+                  <ng-select id="keyAttribute" name="keyAttribute" [(ngModel)]="keyAttribute" (ngModelChange)="onChangesKey()">
+                    <ng-option *ngFor="let item of keys" value="{{ item.key }}">{{ item.key }}</ng-option>
+                  </ng-select>
+                  <div *ngFor="let item of exerciesForAttributes">{{item.value}}</div>
+                </div>
+                <div class="col-4">
+                  <label class="ml-1">Phương án</label>
+                <ng-select id="plan" name="plan" [(ngModel)]="param.planID" (ngModelChange)="getData(param.planID)">
+                  <ng-option *ngFor="let item of listPlan"
+                    value="{{ item.key }}">{{ item.value }}</ng-option>
+                </ng-select>
+              </div>
+              </div>
             </div>
           </div>
           <div class="row justify-content-md-center">
             <div class="col-xl-12">
               <div class="table-responsive">
-                <table class="table table-bordered">
+                <table class="table table-bordered" style="border-collapse: separate;">
                   <thead>
                     <tr>
                       <th></th>
@@ -197,16 +224,21 @@
                       <th class="text-center blue-border" [ngClass]="{'disabled-cell': stand[13]?.value === '0'}">Tốc độ</th>
                       <th class="text-center blue-border" [ngClass]="{'disabled-cell': stand[14]?.value === '0'}">Sáng tạo</th>
                       <th class="text-center">Chất lượng chung</th>
-                      <th class="text-center">Lượng pack cần</th>
-                      <th class="text-center">Số lần tập</th>
+                      <th class="text-center">Tổng điểm tập</th>
                       <th class="text-center"></th>
                     </tr>
                   </thead>
                   <tbody>
                     <tr>
-                      <td></td>
-                      <td class="text-center">{{dataTable.ten}}</td>
-                      <td class="text-center">{{dataTable.viTri}}</td>
+                      <td>
+                        <button type="button"
+                          class="btn btn-success btn-sm"
+                          (click)="addItem()">
+                          <i class="fa fa-plus"></i>
+                        </button>
+                      </td>
+                      <td class="text-center">{{dataTable.name}}</td>
+                      <td class="text-center">{{dataTable.position}}</td>
                       <td class="text-center green-border" [ngClass]="{'disabled-cell': stand[0]?.value === '0'}">{{dataTable.canPha}}</td>
                       <td class="text-center green-border" [ngClass]="{'disabled-cell': stand[1]?.value === '0'}">{{dataTable.kemNguoi}}</td>
                       <td class="text-center green-border" [ngClass]="{'disabled-cell': stand[2]?.value === '0'}">{{dataTable.chayCho}}</td>
@@ -223,7 +255,6 @@
                       <td class="text-center blue-border" [ngClass]="{'disabled-cell': stand[13]?.value === '0'}">{{dataTable.tocDo}}</td>
                       <td class="text-center blue-border" [ngClass]="{'disabled-cell': stand[14]?.value === '0'}">{{dataTable.sangTao}}</td>
                       <td class="text-center"> {{dataTable.chatLuongChung}}</td>
-                      <td class="text-center"></td>
                       <td class="text-center"></td>
                       <td></td>
                     </tr>
@@ -255,9 +286,8 @@
                       <td class="text-center">{{dataKetQua.chatLuongChung}}</td>
                       <td></td>
                       <td></td>
-                      <td></td>
                     </tr>
-                    <tr *ngFor="let dataItem of dataBefore; let i = index ">
+                    <tr *ngFor="let dataItem of dataAfter; let i = index ">
                       <td>
                         <button type="button"
                           class="btn btn-success btn-sm"
@@ -266,7 +296,7 @@
                         </button>
                       </td>
                       <td>
-                        <ng-select class="custom-select" [id]="'baiTap' + i" [name]="'baiTap' + i" [(ngModel)]="dataItem.idBaiTap" (ngModelChange)="changeBaiTap(i, dataItem)" appendTo="ng-select">
+                        <ng-select class="custom-select" [id]="'baiTap' + i" [name]="'baiTap' + i" [(ngModel)]="dataItem.exerciseID" (ngModelChange)="changeBaiTap(i, dataItem)" appendTo="ng-select">
                           <ng-option *ngFor="let item of exercise" [value]="item.key">{{ item.value }}</ng-option>
                         </ng-select>
                       </td>
@@ -277,23 +307,22 @@
                           min="0"
                           max="180"
                           pattern="^[1-9][0-9]?$"
-                          (input)="dataItem.diemTB = (dataItem.diemTB > 180 ? 180 : dataItem.diemTB)"
-                          (keyup)="dataItem.diemTB = (dataItem.diemTB > 180 ? 180 : dataItem.diemTB)"
-                          [(ngModel)]="dataItem.diemTB"
+                          (input)="dataItem.average = (dataItem.average > 180 ? 180 : dataItem.average)"
+                          (keyup)="dataItem.average = (dataItem.average > 180 ? 180 : dataItem.average)"
+                          [(ngModel)]="dataItem.average"
                           (ngModelChange)="changeBaiTap(i, dataItem)">
                       </td>
-                      <td *ngFor="let key of keys" [class]="'text-center red-border-' + i" [ngClass]="{
-                        'green-border': key.border === 'green-border',
-                        'red-border': key.border === 'red-border',
-                        'blue-border': key.border === 'blue-border',
-                        'disabled-cell': stand[keys.indexOf(key)]?.value === '0'}">
-                        <div [class]="key.value">
-                          {{ dataItem[key.value] }}
+                      <td *ngFor="let item of keys" [class]="'text-center red-border-' + i" [ngClass]="{
+                        'green-border': item.value === '1',
+                        'red-border': item.value === '2',
+                        'blue-border': item.value === '3',
+                        'disabled-cell': stand[keys.indexOf(item)]?.value === '0'}">
+                        <div [class]="item.key">
+                          {{ dataItem[item.key] }}
                         </div>
                       </td>
                       <td class="text-center">{{dataItem?.chatLuongChung}}</td>
-                      <td></td>
-                      <td></td>
+                      <td class="text-center">{{dataItem?.soDiemTap}}</td>
                       <td>
                         <button class="btn btn-danger btn-sm"
                           (click)="removeItem(i)">
@@ -304,6 +333,21 @@
                     </tr>
                   </tbody>
                 </table>
+                <div class="col-12">
+                  <label class="d-block">&nbsp;</label>
+                  <button type="button" (click)="addItem()" class="btn btn-success ml-1">
+                    <i class="fa fa-plus"></i> Thêm bài tập
+                  </button>
+                  <button type="button" (click)="openTemplate('ketQua')" class="btn btn-danger ml-1">
+                    <i class="fa fa-plus"></i> Xem kết quả
+                  </button>
+                  <button type="button" (click)="createCompare()" class="btn btn-success ml-1">
+                    <i class="fa fa-plus"></i> Thêm phương án
+                  </button>
+                  <button type="button" (click)="openTemplate('soSanh')" class="btn btn-danger ml-1">
+                    <i class="fa fa-plus"></i> So sánh Phương án
+                  </button>
+                </div>
               </div>
             </div>
           </div>
@@ -325,6 +369,138 @@
   </div>
   <div class="modal-body">
     Tính Toán
+  </div>
+  <!-- </div> -->
+
+</ng-template>
+
+<ng-template #templateKetQua>
+  <!-- <div class="modal-container"> -->
+  <div class="modal-header">
+    <h4 id="dialog-static-name" class="modal-title pull-left">
+      <strong>Kết Quả </strong>
+    </h4>
+    <button type="button" class="btn-close close pull-right" aria-label="Close" (click)="closeTemplate()">
+      <span aria-hidden="true" class="visually-hidden">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <div class="row col-12">
+      <div class="col-4">
+        <table class="table table-bordered">
+          <thead>
+            <tr>
+              <th colspan="3" class="text-center">Phòng thủ</th>
+            </tr>
+          </thead>
+          <thead>
+            <tr>
+              <th>Kỹ năng</th>
+              <th>Trước</th>
+              <th>Sau</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let item of keyPhongThu">
+              <td>{{item.key}}</td>
+              <td>{{dataTable[item.key]}}</td>
+              <td>{{dataKetQua[item.key]}}</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+      <div class="col-4">
+        <table class="table table-bordered">
+          <thead>
+            <tr>
+              <th colspan="3" class="text-center">Tấn Công</th>
+            </tr>
+          </thead>
+          <thead>
+            <tr>
+              <th>Kỹ năng</th>
+              <th>Trước</th>
+              <th>Sau</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let item of keyTanCong">
+              <td>{{item.key}}</td>
+              <td>{{dataTable[item.key]}}</td>
+              <td>{{dataKetQua[item.key]}}</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+      <div class="col-4">
+        <table class="table table-bordered">
+          <thead>
+            <tr>
+              <th colspan="3" class="text-center">Thể Chất</th>
+            </tr>
+          </thead>
+          <thead>
+            <tr>
+              <th>Kỹ năng</th>
+              <th>Trước</th>
+              <th>Sau</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let item of keyTheChat">
+              <td>{{item.key}}</td>
+              <td>{{dataTable[item.key]}}</td>
+              <td>{{dataKetQua[item.key]}}</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+  <!-- </div> -->
+
+</ng-template>
+
+<ng-template #templateSoSanh>
+  <!-- <div class="modal-container"> -->
+  <div class="modal-header">
+    <h4 id="dialog-static-name" class="modal-title pull-left">
+      <strong>So Sánh </strong>
+    </h4>
+    <button type="button" class="btn-close close pull-right" aria-label="Close" (click)="closeTemplate()">
+      <span aria-hidden="true" class="visually-hidden">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <div class="col-12">
+      <table class="table table-striped-columns">
+        <thead>
+          <tr>
+            <th colspan="4" class="text-center">So sánh</th>
+          </tr>
+        </thead>
+        <thead>
+          <tr>
+            <th class="text-center">Kỹ năng</th>
+            <th class="text-center" *ngFor="let pa of listCompares; let i = index">Phương án {{i + 1}}</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let item of keys">
+            <td class="text-center">{{item.key}}</td>
+            <td class="text-center" *ngFor="let pa of listCompares">{{pa[item.key]}}</td>
+          </tr>
+          <tr>
+            <td></td>
+            <td *ngFor="let pa of listCompares; let i = index" colspan="{{listCompares.length + 1}}" class="text-center">
+              <button type="button" (click)="deleteCompare(pa)" class="btn btn-danger ml-1">
+                <i class="fa fa-remove"></i>
+              </button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
   </div>
   <!-- </div> -->
 
