--- a/eTierMeeting_v2/SPA/src/app/views/E-Tier-Meeting/production/T6/efficiency/efficiencymain/efficiencymain.component.html
+++ b/eTierMeeting_v2/SPA/src/app/views/E-Tier-Meeting/production/T6/efficiency/efficiencymain/efficiencymain.component.html
@@ -3,23 +3,44 @@
   <div class="animated fadeIn mt-4">
     <div class="row">
       <div class="col-6">
+        <div class="btn-group ml-3"
+             btnRadioGroup
+             [(ngModel)]="selectedBrand">
+          <!-- Thay thế btnCheckbox bằng [btnRadio] -->
+          <label *ngFor="let item of efficiencyParam.brands;"
+                 [btnRadio]="item"
+                 (click)="onBrandChange(item)"
+                 tabindex="0"
+                 role="button"
+                 id="{{'brand_' + item}}"
+                 class="btnFactory">{{item}}</label>
+        </div>
         <div class="btn-group ml-3">
-          <label [(ngModel)]="checkAll" id="checkAll" btnCheckbox
-            class="btnFactory" tabindex="0" role="button"
-            (click)="changeFactory('all')">ALL</label>
+          <label [(ngModel)]="checkAll"
+                 id="checkAll"
+                 btnCheckbox
+                 class="btnFactory"
+                 tabindex="0"
+                 role="button"
+                 (click)="changeFactory('all')">ALL</label>
           <label *ngFor="let item of efficiencyParam.factorys; let i = index"
-            btnCheckbox tabindex="0" role="button" id="{{'factory_' + item.id}}"
-            [(ngModel)]="item.status" class="btnFactory"
-            (click)="changeFactory(item.id, i)">{{item.name}}</label>
+                 btnCheckbox
+                 tabindex="0"
+                 role="button"
+                 id="{{'factory_' + item.id}}"
+                 [(ngModel)]="item.status"
+                 class="btnFactory"
+                 (click)="changeFactory(item.id, i)">{{item.name}}</label>
           <!-- Checkbox auto change page-->
-          <div
-            class="custom-checkbox autoChangePage d-flex align-items-center text-white ml-custom">
-            <input type="checkbox" name="autoChangePage"
-              class="custom-control-input form-check-input" id="autoChangePage"
-              [(ngModel)]="autoChangePage"
-              (ngModelChange)="onAutoChangePageChange()">
+          <div class="custom-checkbox autoChangePage d-flex align-items-center text-white ml-custom">
+            <input type="checkbox"
+                   name="autoChangePage"
+                   class="custom-control-input form-check-input"
+                   id="autoChangePage"
+                   [(ngModel)]="autoChangePage"
+                   (ngModelChange)="onAutoChangePageChange()">
             <label class="form-check-label custom-control-label text-white"
-              for="autoChangePage">Auto
+                   for="autoChangePage">Auto
               Page</label>
           </div>
         </div>
@@ -29,9 +50,10 @@
           <div class="col-12">
             <div class="date-range-group pr-3">
               <h2 class="text-white m-0 mr-1">Date range:</h2>
-              <select class="custom-select custom-select-lg w-25" name="active"
-                [ngModel]="efficiencyParam.type"
-                (ngModelChange)="changeDateRange($event)">
+              <select class="custom-select custom-select-lg w-25"
+                      name="active"
+                      [ngModel]="efficiencyParam.type"
+                      (ngModelChange)="changeDateRange($event)">
                 <option value="week">1 Weekly</option>
                 <option value="month">2 Monthly</option>
                 <option value="year">3 Yearly</option>
@@ -43,20 +65,29 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-12" *ngIf="isShowChart">
-        <carousel id="carouselId" [itemsPerSlide]="itemsPerSlide"
-          [singleSlideOffset]="false" [showIndicators]="false" [noWrap]="false"
-          [noPause]="true" [pauseOnFocus]="false" [interval]="myInterval" *ngIf="dataAll?.length > 0">
-            <ng-container  *ngFor="let data of dataAll; let index = index;">
+      <div class="col-12"
+           *ngIf="isShowChart">
+        <carousel id="carouselId"
+                  [itemsPerSlide]="itemsPerSlide"
+                  [singleSlideOffset]="false"
+                  [showIndicators]="false"
+                  [noWrap]="false"
+                  [noPause]="true"
+                  [pauseOnFocus]="false"
+                  [interval]="myInterval"
+                  *ngIf="dataAll?.length > 0">
+          <ng-container *ngFor="let data of dataAll; let index = index;">
             <slide [style]="data.isActive ? 'width: 50%;' : 'width: 0%;'">
-              <div class="card m-3" *ngIf="data.isActive" >
+              <div class="card m-3"
+                   *ngIf="data.isActive">
                 <div class="card-body p-0">
                   <div class="chart">
                     <fusioncharts [chartConfig]="chartConfig"
-                      [dataSource]="data" dataEmptyMessage="No Data!">
+                                  [dataSource]="data"
+                                  dataEmptyMessage="No Data!">
                     </fusioncharts>
                   </div>
-                  <div class="table-chart text-center" >
+                  <div class="table-chart text-center">
                     <table class="table m-0">
                       <thead>
                         <tr>
@@ -69,7 +100,7 @@
                         <tr *ngFor="let content of data.dataset; let i = index">
                           <td>
                             <div class="line-color"
-                              [style.background-color]="colors[i]"></div>
+                                 [style.background-color]="colors[i]"></div>
                             {{content.seriesname}}
                           </td>
                           <td *ngFor="let item of content.data">
