--- a/eTierMeeting_v2/SPA/src/app/views/main/assets-lend-maintain/main/main.component.html
+++ b/eTierMeeting_v2/SPA/src/app/views/main/assets-lend-maintain/main/main.component.html
@@ -45,23 +45,22 @@
             <div class="col-md-3 col-sm-4 col-xs-6 form-group idleft">
               <label class="badge badge-warning">{{'assetslendmaintain.return'
                 | translate }}</label>
-              <select class="form-control"
-                      [(ngModel)]="param.return"
-                      id="return"
-                      name="return"
-                      required>
-                <option value="All">{{'assetslendmaintain.all' | translate }}
-                </option>
-                <option value="Y">{{'assetslendmaintain.y' | translate }}
-                </option>
-                <option value="N">{{'assetslendmaintain.n' | translate }}
-                </option>
-              </select>
+              <ng-select [(ngModel)]="param.return"
+                         id="return"
+                         name="return"
+                         required>
+                <ng-option value="all">{{'assetslendmaintain.all' | translate }}
+                </ng-option>
+                <ng-option value="y">{{'assetslendmaintain.y' | translate }}
+                </ng-option>
+                <ng-option value="n">{{'assetslendmaintain.n' | translate }}
+                </ng-option>
+              </ng-select>
             </div>
           </div>
-          <div class="clearboth">
+          <div class="clearboth d-flex align-items-center">
             <button type="submit"
-                    class="btn btn-primary export_btn pull-left"
+                    class="btn btn-primary export_btn"
                     (click)="search()">
               <i class="fa fa-search"> {{'common.search' | translate }}</i>
             </button>
@@ -70,6 +69,18 @@
                     (click)="download()">
               <i class="fa fa-file-excel-o"> {{'common.export_excel'|translate}}</i>
             </button>
+            <form class="ml-2">
+              <label class="btn btn-success"
+                     style="cursor: pointer; margin-bottom: 0;">
+                <i class="fa fa-upload"></i> Upload Excel
+                <input #inputRef
+                       type="file"
+                       name="upload"
+                       (change)="upload($event)"
+                       style="display: none;"
+                       [accept]="extensions">
+              </label>
+            </form>
           </div>
         </div>
         <div class="card-body">
@@ -103,11 +114,16 @@
                   <td>{{item.supplier}}</td>
                   <td>{{item.usingFty}}</td>
                   <td>{{item.iO_Reason}}</td>
-                  <td>{{item.iO_Date}}</td>
+                  <td>{{item.iO_Date | date: "yyyy/MM/dd"}}</td>
                   <td>{{item.iO_Confirm}}</td>
-                  <td>{{item.re_Date}}</td>
+                  <td>{{item.re_Date | date: "yyyy/MM/dd"}}</td>
                   <td>{{item.re_Confirm}}</td>
                   <td>{{item.remark}}</td>
+                  <td>
+                    <button class="btn btn-sm btn-primary ms-2"
+                            (click)="openEditModal(item)">
+                      <i class="fa fa-info"></i> {{'System.Action.View' | translate}}</button>
+                  </td>
                 </tr>
               </tbody>
             </table>
